# lasio

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  README.rst  binary_serialization  coverage.xml  environment.yml  numpy_reader.py  optional-packages.txt  pyproject.toml  pytest.ini  requirements.txt  sample.xlsx  setup.py  test_output.las
docs/: 12345a_v2.las  Add links to GitHub for all issue and PR refs in changelog.ipynb  Example - build LAS file from scratch.ipynb  Example usage.ipynb  Example usage.md  GT14574.LAS  GT1457B.LAS  Intro (LAS 1.2 files).ipynb  Makefile  Untitled0.ipynb  generate.py  generate.sh  issue 32.ipynb  make.bat  metadata_mnemonics.csv  reading a large log file (1.2).ipynb  reading and viewing a log file (1.2).html  reading and viewing a log file (1.2).ipynb  reading and viewing a log file (1.2).md  reading and viewing a log file (1.2).rst  reading some real-life data from a LAS 2.0 file.ipynb  requirements.txt  rundocs.py  scratch_example.las  scratch_example_v1.2.las  scratch_example_v2.las  v0.10_changelog.txt
las_reader/: __init__.py  _logging.py  _version.py  core.py  las.py  las2excel.py
lasio/: __init__.py  convert_version.py  defaults.py  examples.py  excel.py  exceptions.py  las.py  las2excel.py  las_items.py  las_version.py  numpy_reader.py  reader.py  spec.py  test_encoding.py  test_enhancements.py  test_excel.py  test_open_file.py  test_read.py  test_wrapped.py  test_write.py  version.py  writer.py
notebooks/: 204-20-1_logs.las  Detailed example of LASFile objects and attributes.ipynb  Example - build LAS file from scratch.ipynb  Example - converting wrapped to unwrapped.ipynb  README.md  Speed test.ipynb  basic example of reading a LAS file.ipynb  build LAS file from scratch.ipynb  converting LAS file with wrapped data to unwrapped.ipynb  converting a LAS file to an Excel spreadsheet.ipynb  example.xlsx  (+7 more)
(+287 files in other folders)
