[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lasio"
dynamic = ["version"]
description = "Read/write well data from Log ASCII Standard (LAS) files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]
authors = [
    { name = "Kent Inverarity", email = "kinverarity@hotmail.com" }
]
license = { text = "MIT" }
keywords = ["science", "geophysics", "io"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.optional-dependencies]
all = ["pandas", "chardet", "openpyxl"]
test = ["pytest>=6", "pytest-cov", "coverage", "codecov", "pytest-benchmark", "black", "pandas", "chardet", "openpyxl"]

[project.scripts]
las2excel = "lasio.excel:main"
las2excelbulk = "lasio.excel:main_bulk"
lasversionconvert = "lasio.convert_version:convert_version"
lasio = "lasio:version"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
log_cli = true
addopts = "--doctest-modules --cov-config=.coveragerc --cov-report xml --cov-report term --cov=lasio"
testpaths = ["tests"]

